Project.toml compatible with julia 1.12

--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "85b7f81f",
    "metadata": {},
    "outputs": [
@@ -10,44 +10,123 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
+      "\n",
+      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
+      "\n",
+      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
+      "\n",
+      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
+      "\n",
+      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
+      "\n",
+      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
+      "\n",
+      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
+      "\n",
+      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n"
+     ]
+    },
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching pipe_writer(::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)})\nThe applicable method may be too new: running in world age 38608, while current world is 38669.\n\nClosest candidates are:\n  pipe_writer(::VSCodeServer.IJuliaCore.IJuliaStdio) (method too new to be called from this world context.)\n   @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/IJuliaCore/src/stdio.jl:16\n  pipe_writer(!Matched::Pipe)\n   @ Base stream.jl:781\n  pipe_writer(!Matched::Base.Process)\n   @ Base process.jl:23\n  ...\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching pipe_writer(::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)})\n",
+      "The applicable method may be too new: running in world age 38608, while current world is 38669.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  pipe_writer(::VSCodeServer.IJuliaCore.IJuliaStdio) (method too new to be called from this world context.)\n",
+      "   @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/IJuliaCore/src/stdio.jl:16\n",
+      "  pipe_writer(!Matched::Pipe)\n",
+      "   @ Base stream.jl:781\n",
+      "  pipe_writer(!Matched::Base.Process)\n",
+      "   @ Base process.jl:23\n",
+      "  ...\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] unsafe_write(io::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)}, p::Ptr{UInt8}, nb::UInt64)\n",
+      "    @ Base ./io.jl:452\n",
+      "  [2] unsafe_write(io::IOContext{IO}, p::Ptr{UInt8}, nb::UInt64)\n",
+      "    @ Base ./io.jl:452\n",
+      "  [3] write\n",
+      "    @ ./strings/io.jl:246 [inlined]\n",
+      "  [4] print\n",
+      "    @ ./strings/io.jl:248 [inlined]\n",
+      "  [5] print(::IOContext{IO}, ::String, ::String)\n",
+      "    @ Base ./strings/io.jl:46\n",
+      "  [6] println\n",
+      "    @ ./strings/io.jl:77 [inlined]\n",
+      "  [7] macro expansion\n",
+      "    @ ./precompilation.jl:1087 [inlined]\n",
+      "  [8] macro expansion\n",
+      "    @ ./lock.jl:376 [inlined]\n",
+      "  [9] _precompilepkgs(pkgs::Vector{String}, internal_call::Bool, strict::Bool, warn_loaded::Bool, timing::Bool, _from_loading::Bool, configs::Vector{Pair{Cmd, Base.CacheFlags}}, _io::IOContext{IO}, fancyprint::Bool, manifest::Bool, ignore_loaded::Bool)\n",
+      "    @ Base.Precompilation ./precompilation.jl:1086\n",
+      " [10] precompilepkgs(pkgs::Vector{String}; internal_call::Bool, strict::Bool, warn_loaded::Bool, timing::Bool, _from_loading::Bool, configs::Pair{Cmd, Base.CacheFlags}, io::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)}, fancyprint::Bool, manifest::Bool, ignore_loaded::Bool)\n",
+      "    @ Base.Precompilation ./precompilation.jl:472\n",
+      " [11] __require_prelocked(pkg::Base.PkgId, env::String)\n",
+      "    @ Base ./loading.jl:2630\n",
+      " [12] _require_prelocked(uuidkey::Base.PkgId, env::String)\n",
+      "    @ Base ./loading.jl:2465\n",
+      " [13] macro expansion\n",
+      "    @ ./loading.jl:2393 [inlined]\n",
+      " [14] macro expansion\n",
+      "    @ ./lock.jl:376 [inlined]\n",
+      " [15] __require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:2358\n",
+      " [16] require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:2334\n",
+      " [17] eval(m::Module, e::Any)\n",
+      "    @ Core ./boot.jl:489\n",
+      " [18] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:2843\n",
+      " [19] (::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:24\n",
+      " [20] withpath(f::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/VSCodeServer/src/repl.jl:276\n",
+      " [21] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, params::VSCodeServer.NotebookRunCellArguments, token::VSCodeServer.CancellationTokens.CancellationToken)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      " [22] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::VSCodeServer.JSONRPC.Request)\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/JSONRPC/src/typed.jl:0\n",
+      " [23] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#14#15\"{String})\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:147\n",
+      " [24] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/notebook/notebook.jl:35"
      ]
     }
    ],
    "source": [
     "# Nobuaki Fuji @ipgp September 2025\n",
-    "using Pkg, BenchmarkTools\n",
+    "using Pkg\n",
     "\n",
     "\n",
     "cd(@__DIR__)\n",
     "Pkg.activate(\"../..\")\n",
-    "\n",
+    "using BenchmarkTools\n",
     "# below are the tools to debug the code\n",
-    "using Revise # this is very cool since \n",
+    "using Revise # if we use Revise, myInclude will be Revise.includet\n",
     "using Profile, StatProfilerHTML\n",
     "\n",
     "\n",
-    "Revise.includet(\"../src/imageReader.jl\") # read 2D images for models\n",
     "\n",
-    "Revise.includet(\"../src/OPTwrappers.jl\") \n"
+    "\n",
+    "include(\"../src/batchRevise.jl\")\n",
+    "using .BatchRevise\n",
+    "@show using_revise\n",
+    "\n",
+    "myInclude(\"../src/imageReader.jl\") # read 2D images for models\n",
+    "\n",
+    "myInclude(\"../src/OPTwrappers.jl\") \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0ae67625",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iExperiment = 1\n",
     "\n",
@@ -57,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "abcee459",
    "metadata": {},
    "outputs": [],
@@ -75,20 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "29587f11",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Differential(t)(Differential(t)(u(x, y, t))) - (Differential(x)(Differential(x)(u(x, y, t))) + Differential(y)(Differential(y)(u(x, y, t))))*(v(x, y)^2), u(x, y, t), v(x, y), f(x, y, t), f(x, y, t), 1, (x, y, t), Any[Differential(x), Differential(y), Differential(t)], Any[Differential(x) ∘ Differential(x), Differential(y) ∘ Differential(y), Differential(t) ∘ Differential(t)])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "famousEquationType=\"2DacousticTime\"\n",
     "exprs,fields,vars,extexprs,extfields,extvars,coordinates,∂,∂²=famousEquations(famousEquationType)"
@@ -96,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7bedc499",
    "metadata": {},
    "outputs": [],
@@ -146,40 +215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2a2ab3be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(x, y, t)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "coordinates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8cd30c3a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Δnum = (1.0,1.0,1.0) # this should be in the same order as coordinates \n",
     "\n",
@@ -202,21 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "98b5b8ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1-element Vector{Any}:\n",
-       " [0.4 0.4 … 0.4 0.4; 0.4 0.4 … 0.4 0.4; … ; 0.5138386099547898 0.5163891573813251 … 0.5501948972360029 0.5472638856339349; 0.5300777283024765 0.5308589172720881 … 0.5545259469249547 0.5545259469249547]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models=[] # you might need to make this empty tuple first, otherwise one-member tuple can be misinterpreted\n",
     "models=push!(models, (model .* 0.2 .+ 0.4))"
@@ -234,20 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6596fcab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(676, 802, 3)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fakeNt = 1\n",
     "timeMarching = any(a -> a === timeDimensionString, string.(coordinates)) \n",
@@ -261,36 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "884a4dc6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dict{String, Any} with 16 entries:\n",
-       "  \"IneedExternalSources\"          => true\n",
-       "  \"models\"                        => Any[[0.4 0.4 … 0.4 0.4; 0.4 0.4 … 0.4 0.4;…\n",
-       "  \"maskedRegionForSourcesInSpace\" => CartesianIndex[CartesianIndex(338, 401)]\n",
-       "  \"iExperiment\"                   => 1\n",
-       "  \"orderBtime\"                    => 1\n",
-       "  \"Δnum\"                          => (1.0, 1.0, 1.0)\n",
-       "  \"pointsInSpace\"                 => 2\n",
-       "  \"WorderBspace\"                  => 1\n",
-       "  \"pointsInTime\"                  => 2\n",
-       "  \"WorderBtime\"                   => 1\n",
-       "  \"supplementaryOrder\"            => 2\n",
-       "  \"orderBspace\"                   => 1\n",
-       "  \"modelPoints\"                   => (676, 802, 3)\n",
-       "  \"forceModels\"                   => 1.0\n",
-       "  \"modelName\"                     => \"marmousi\"\n",
-       "  \"famousEquationType\"            => \"2DacousticTime\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "maskedRegionForSourcesInSpace  = Array{CartesianIndex,1}(undef,0) # it is important to decalre the type of this\n",
     "maskedRegionForSourcesInSpace = push!(maskedRegionForSourcesInSpace, CartesianIndex(modelPoints[1:end-1].÷2))# in Ndimension (or Ndimension  - 1 if timeMarching)\n",
@@ -323,31 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3ccec8ec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dict{String, Any} with 11 entries:\n",
-       "  \"IneedExternalSources\" => true\n",
-       "  \"iExperiment\"          => 1\n",
-       "  \"orderBtime\"           => 1\n",
-       "  \"Δnum\"                 => (1.0, 1.0, 1.0)\n",
-       "  \"pointsInSpace\"        => 2\n",
-       "  \"WorderBspace\"         => 1\n",
-       "  \"pointsInTime\"         => 2\n",
-       "  \"WorderBtime\"          => 1\n",
-       "  \"supplementaryOrder\"   => 2\n",
-       "  \"orderBspace\"          => 1\n",
-       "  \"famousEquationType\"   => \"2DacousticTime\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "    @unpack famousEquationType, Δnum, orderBtime, orderBspace, WorderBtime,WorderBspace,supplementaryOrder,pointsInSpace, pointsInTime, IneedExternalSources, modelName, models, modelPoints, forceModels,maskedRegionForSourcesInSpace, iExperiment = concreteModelParameters\n",
     "    exprs,fields,vars,extexprs,extfields,extvars,coordinates,∂,∂² = famousEquations(famousEquationType)\n",
@@ -370,20 +351,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "bc933626",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(orderBtime = 1, orderBspace = 1, pointsInSpace = 2, pointsInTime = 2)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     " @unpack famousEquationType, Δnum, orderBtime, orderBspace, WorderBtime,WorderBspace,supplementaryOrder,pointsInSpace, pointsInTime,IneedExternalSources, iExperiment= operatorConfigurations\n",
     "\n",
@@ -416,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9e670dfe",
    "metadata": {},
    "outputs": [],
@@ -447,23 +418,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "24c896e3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element Vector{Int64}:\n",
-       " 1\n",
-       " 1\n",
-       " 0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     " #region investigation of all the fields and vars dependencies in terms of x-y-z-t\n",
     "\n",
@@ -496,23 +454,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0d7f0267",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element Vector{Int64}:\n",
-       " 5\n",
-       " 5\n",
-       " 5"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#region definition of points in time and space to be used\n",
     "\n",
@@ -550,28 +495,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9692ea9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(bigα, varM) = (Any[Any[(node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(3, 1, 1)), (node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 3, 1)), (node = 1, nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 1, 3))];;], Any[v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉ v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉ v₁ v₂ v₃ v₄ v₅ v₆ v₇ v₈ v₉])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1-element Vector{Int64}:\n",
-       " 14"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#region analysis of expressions to obtain the α_{n'nji}\n",
     "\n",
@@ -626,42 +553,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "df9f803d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "false"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "CˡηSymbolicInversion=false"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1122af9d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pointsIndices = availablePointsConfigurations[iConfigGeometry] = [[1, 1, 1] [1, 2, 1] [1, 3, 1]; [2, 1, 1] [2, 2, 1] [2, 3, 1]; [3, 1, 1] [3, 2, 1] [3, 3, 1];;; [1, 1, 2] [1, 2, 2] [1, 3, 2]; [2, 1, 2] [2, 2, 2] [2, 3, 2]; [3, 1, 2] [3, 2, 2] [3, 3, 2];;; [1, 1, 3] [1, 2, 3] [1, 3, 3]; [2, 1, 3] [2, 2, 3] [2, 3, 3]; [3, 1, 3] [3, 2, 3] [3, 3, 3]]\n",
-      "middleLinearν = centrePointConfigurations[iConfigGeometry] = 14\n",
-      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
-      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
-      "modifiedμ[iCoord] = output[\"modμ\"] = Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     " #region obtaining the semi-symbolic expression of cost function based on eqns. 52 and 53.\n",
     "\n",
@@ -810,15 +715,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.7",
+   "display_name": "Julia 1.12.0",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.7"
+   "version": "1.12.0"
   }
  },
  "nbformat": 4,
