--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1,102 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1a2c0874",
+   "metadata": {},
+   "source": [
+    "# Debug and test flexOPT.jl"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "85b7f81f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "\n",
-      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
-      "\n",
-      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
-      "\n",
-      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
-      "\n",
-      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
-      "\n",
-      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
-      "\n",
-      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
-      "\n",
-      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n"
-     ]
-    },
-    {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching pipe_writer(::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)})\nThe applicable method may be too new: running in world age 38608, while current world is 38669.\n\nClosest candidates are:\n  pipe_writer(::VSCodeServer.IJuliaCore.IJuliaStdio) (method too new to be called from this world context.)\n   @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/IJuliaCore/src/stdio.jl:16\n  pipe_writer(!Matched::Pipe)\n   @ Base stream.jl:781\n  pipe_writer(!Matched::Base.Process)\n   @ Base process.jl:23\n  ...\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching pipe_writer(::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)})\n",
-      "The applicable method may be too new: running in world age 38608, while current world is 38669.\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  pipe_writer(::VSCodeServer.IJuliaCore.IJuliaStdio) (method too new to be called from this world context.)\n",
-      "   @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/IJuliaCore/src/stdio.jl:16\n",
-      "  pipe_writer(!Matched::Pipe)\n",
-      "   @ Base stream.jl:781\n",
-      "  pipe_writer(!Matched::Base.Process)\n",
-      "   @ Base process.jl:23\n",
-      "  ...\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      "  [1] unsafe_write(io::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)}, p::Ptr{UInt8}, nb::UInt64)\n",
-      "    @ Base ./io.jl:452\n",
-      "  [2] unsafe_write(io::IOContext{IO}, p::Ptr{UInt8}, nb::UInt64)\n",
-      "    @ Base ./io.jl:452\n",
-      "  [3] write\n",
-      "    @ ./strings/io.jl:246 [inlined]\n",
-      "  [4] print\n",
-      "    @ ./strings/io.jl:248 [inlined]\n",
-      "  [5] print(::IOContext{IO}, ::String, ::String)\n",
-      "    @ Base ./strings/io.jl:46\n",
-      "  [6] println\n",
-      "    @ ./strings/io.jl:77 [inlined]\n",
-      "  [7] macro expansion\n",
-      "    @ ./precompilation.jl:1087 [inlined]\n",
-      "  [8] macro expansion\n",
-      "    @ ./lock.jl:376 [inlined]\n",
-      "  [9] _precompilepkgs(pkgs::Vector{String}, internal_call::Bool, strict::Bool, warn_loaded::Bool, timing::Bool, _from_loading::Bool, configs::Vector{Pair{Cmd, Base.CacheFlags}}, _io::IOContext{IO}, fancyprint::Bool, manifest::Bool, ignore_loaded::Bool)\n",
-      "    @ Base.Precompilation ./precompilation.jl:1086\n",
-      " [10] precompilepkgs(pkgs::Vector{String}; internal_call::Bool, strict::Bool, warn_loaded::Bool, timing::Bool, _from_loading::Bool, configs::Pair{Cmd, Base.CacheFlags}, io::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)}, fancyprint::Bool, manifest::Bool, ignore_loaded::Bool)\n",
-      "    @ Base.Precompilation ./precompilation.jl:472\n",
-      " [11] __require_prelocked(pkg::Base.PkgId, env::String)\n",
-      "    @ Base ./loading.jl:2630\n",
-      " [12] _require_prelocked(uuidkey::Base.PkgId, env::String)\n",
-      "    @ Base ./loading.jl:2465\n",
-      " [13] macro expansion\n",
-      "    @ ./loading.jl:2393 [inlined]\n",
-      " [14] macro expansion\n",
-      "    @ ./lock.jl:376 [inlined]\n",
-      " [15] __require(into::Module, mod::Symbol)\n",
-      "    @ Base ./loading.jl:2358\n",
-      " [16] require(into::Module, mod::Symbol)\n",
-      "    @ Base ./loading.jl:2334\n",
-      " [17] eval(m::Module, e::Any)\n",
-      "    @ Core ./boot.jl:489\n",
-      " [18] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
-      "    @ Base ./loading.jl:2843\n",
-      " [19] (::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:24\n",
-      " [20] withpath(f::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/VSCodeServer/src/repl.jl:276\n",
-      " [21] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, params::VSCodeServer.NotebookRunCellArguments, token::VSCodeServer.CancellationTokens.CancellationToken)\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
-      " [22] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::VSCodeServer.JSONRPC.Request)\n",
-      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/JSONRPC/src/typed.jl:0\n",
-      " [23] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#14#15\"{String})\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/packages/VSCodeServer/src/serve_notebook.jl:147\n",
-      " [24] top-level scope\n",
-      "    @ ~/.vscode/extensions/julialang.language-julia-1.156.1/scripts/notebook/notebook.jl:35"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Nobuaki Fuji @ipgp September 2025\n",
     "using Pkg\n",
