revise should work at this stage!

--- a/OPTmotors/misc/DIVAndTestForStagYYmodels.ipynb
+++ b/OPTmotors/misc/DIVAndTestForStagYYmodels.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "using DIVAnd,CairoMakie\n",
     "\n",
-    "include(\"../src/batchStagYY.jl\")"
+    "myInclude(\"../src/batchStagYY.jl\")"
    ]
   },
   {
