--- a/OPTmotors/misc/testPolynomialInterpolation.ipynb
+++ b/OPTmotors/misc/testPolynomialInterpolation.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"../src/mainStructures.jl\")"
+    "myInclude(\"../src/mainStructures.jl\")"
    ]
   },
   {
