--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "85b7f81f",
    "metadata": {},
    "outputs": [
@@ -19,22 +19,8 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "WARNING: replacing module BatchRevise.\n",
-      "WARNING: using BatchRevise.myInclude in module Main conflicts with an existing identifier.\n",
-      "┌ Warning: Revise not found; falling back to include for ../src/imageReader.jl\n",
-      "└ @ Main.BatchRevise /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:26\n",
-      "┌ Warning: Revise not found; falling back to include for ../src/batchImages.jl\n",
-      "└ @ Main.BatchRevise /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:26\n",
-      "┌ Warning: Revise not found; falling back to include for ../src/OPTwrappers.jl\n",
-      "└ @ Main.BatchRevise /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:26\n",
-      "┌ Warning: Replacing docs for `Main.BatchRevise.Ricker :: Tuple{Any, Any, Any}` in module `Main.BatchRevise`\n",
-      "└ @ Base.Docs docs/Docs.jl:243\n",
-      "┌ Warning: Replacing docs for `Main.BatchRevise.Ricker :: NTuple{5, Any}` in module `Main.BatchRevise`\n",
-      "└ @ Base.Docs docs/Docs.jl:243\n",
-      "┌ Warning: Replacing docs for `Main.BatchRevise.Ricker :: NTuple{6, Any}` in module `Main.BatchRevise`\n",
-      "└ @ Base.Docs docs/Docs.jl:243\n",
-      "┌ Warning: Replacing docs for `Main.BatchRevise.Ricker :: NTuple{8, Any}` in module `Main.BatchRevise`\n",
-      "└ @ Base.Docs docs/Docs.jl:243\n"
+      "┌ Warning: GPU backend not available: MethodError(Metal.MTL.devices, (), 0x0000000000006ab4)\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchEnzyme.jl:31\n"
      ]
     },
     {
@@ -56,15 +42,11 @@
     "Pkg.activate(\"../..\")\n",
     "using BenchmarkTools\n",
     "# below are the tools to debug the code\n",
-    "#using Revise # if we use Revise, myInclude will be Revise.includet\n",
+    "#using Revise # if we use Revise, myInclude will be Revise.myIncludet\n",
     "using Profile, StatProfilerHTML\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "include(\"../src/batchRevise.jl\")\n",
-    "using .BatchRevise\n",
-    "\n",
+    "include(\"../src/batchRevise.jl\") # if \"using Revise\" above, myInclude will be defined as Revise.includet\n",
     "\n",
     "myInclude(\"../src/imageReader.jl\") # read 2D images for models\n",
     "\n",
@@ -73,10 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0ae67625",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "iExperiment = 1\n",
     "\n",
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "abcee459",
    "metadata": {},
    "outputs": [],
@@ -104,10 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "29587f11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Differential(t)(Differential(t)(u(x, y, t))) - (Differential(x)(Differential(x)(u(x, y, t))) + Differential(y)(Differential(y)(u(x, y, t))))*(v(x, y)^2), u(x, y, t), v(x, y), f(x, y, t), f(x, y, t), 1, (x, y, t), Any[Differential(x), Differential(y), Differential(t)], Any[Differential(x) ∘ Differential(x), Differential(y) ∘ Differential(y), Differential(t) ∘ Differential(t)])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "famousEquationType=\"2DacousticTime\"\n",
     "exprs,fields,vars,extexprs,extfields,extvars,coordinates,∂,∂²=famousEquations(famousEquationType)"
