--- a/OPTmotors/misc/inverse_coef_Taylor.ipynb
+++ b/OPTmotors/misc/inverse_coef_Taylor.ipynb
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "include(\"../src/batchSymbolics.jl\")"
+    "myInclude(\"../src/batchSymbolics.jl\")"
    ]
   },
   {
