--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -19,18 +19,43 @@
      "output_type": "stream",
      "text": [
       "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "┌ Warning: GPU backend not available: MethodError(Metal.MTL.devices, (), 0x0000000000006ab4)\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchEnzyme.jl:31\n"
+      "┌ Info: Including with Revise: ../src/imageReader.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchImages.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchUseful.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/OPTwrappers.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchNewSymbolics.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/OPTnewEngines.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchNewSymbolics.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchUseful.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchDrWatson.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/CerjanBoundary.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/IntegrateBsplineAndPolynomials.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchNewSymbolics.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/famousSourceFunctions.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/famousEquations.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/timeMarchingSchemes.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchDiffTools.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchUseful.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n",
+      "┌ Info: Including with Revise: ../src/batchEnzyme.jl\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:28\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "quasiNumericalOperatorConstruction (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -46,7 +71,8 @@
     "using Profile, StatProfilerHTML\n",
     "\n",
     "\n",
-    "include(\"../src/batchRevise.jl\") # if \"using Revise\" above, myInclude will be defined as Revise.includet\n",
+    "include(\"../src/batchRevise.jl\") # Revise.jl will be automatically activated. If you do not want Revise then put using_revise = false\n",
+    "#using_revise=false\n",
     "\n",
     "myInclude(\"../src/imageReader.jl\") # read 2D images for models\n",
     "\n",
@@ -55,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0ae67625",
    "metadata": {},
    "outputs": [
@@ -78,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "abcee459",
    "metadata": {},
    "outputs": [],
@@ -96,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "29587f11",
    "metadata": {},
    "outputs": [
